# python-project-50

./: README.md  makefile  pyproject.toml
.github/workflows/: main.yml
gendiff/: __init__.py  copy_diff.py  diff.py  gendiff.py  generate_dict.py  generate_dict2.py  generate_diff.py  generate_diff2.py  generate_interior_space.py  make_str.py  parcer_file_extension.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tests/: test_generate_diff.py
gendiff/tests/fixtures/: result_string.py
